# plugo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.json  docker-compose.yml  openapi_temp.json  package.json  pyproject.toml  tmp_api.json
.claude/: settings.json  settings.local.json
.claude/prompts/: zero-trust-mode.txt
.claude/rules/: form-and-list-format.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-mcp/: crawl-job-detail.yml  crawl-status.yml  page-2026-03-31T16-32-26-258Z.yml  page-2026-03-31T16-32-47-342Z.yml  page-2026-03-31T16-33-04-097Z.yml  page-2026-03-31T16-33-09-789Z.yml  page-2026-03-31T16-33-20-242Z.yml  page-2026-03-31T16-33-36-845Z.yml  page-2026-03-31T16-34-32-899Z.yml  page-2026-03-31T16-34-40-770Z.yml  page-2026-03-31T16-34-51-545Z.yml  page-2026-03-31T16-35-10-135Z.yml  page-2026-03-31T16-35-49-126Z.yml  page-2026-03-31T16-36-28-984Z.yml  page-2026-03-31T16-36-42-256Z.yml  page-2026-03-31T16-36-53-840Z.yml  page-2026-03-31T16-37-01-056Z.yml  page-2026-03-31T16-40-22-174Z.yml  page-2026-03-31T16-40-37-014Z.yml  page-2026-03-31T16-41-10-576Z.yml  page-2026-03-31T16-41-54-392Z.yml  page-2026-03-31T16-43-04-473Z.yml  page-2026-03-31T16-43-17-319Z.yml  page-2026-03-31T16-43-24-038Z.yml  page-2026-03-31T16-43-57-593Z.yml  page-2026-03-31T16-45-37-482Z.yml  page-2026-03-31T16-46-30-470Z.yml  page-2026-03-31T16-46-34-950Z.yml  page-2026-03-31T16-46-41-536Z.yml  page-2026-03-31T16-47-04-639Z.yml  page-2026-03-31T16-47-49-640Z.yml  page-2026-03-31T16-56-48-221Z.yml  page-2026-03-31T16-56-52-224Z.yml  page-2026-03-31T16-57-08-587Z.yml  page-2026-03-31T16-57-27-882Z.yml  page-2026-03-31T17-08-07-986Z.yml  page-2026-03-31T17-08-13-030Z.yml  page-2026-03-31T17-08-24-402Z.yml  page-2026-03-31T17-08-30-259Z.yml  page-2026-03-31T17-09-42-976Z.yml  (+18 more)
backend/: .dockerignore  Dockerfile  auth.py  config.py  crypto.py  database.py  logging_config.py  main.py  manage.py  pyproject.toml  requirements-browser.txt  requirements-dev.txt  requirements.txt  scheduler.py
backend/agent/: __init__.py  core.py  memory.py  rag.py  tools.py
backend/knowledge/: __init__.py  browser_crawler.py  chunker.py  crawler.py  embed_cache.py  file_processor.py  vector.py
backend/models/: __init__.py  audit_log.py  chat.py  crawl.py  flow.py  knowledge.py  llm_key.py  memory.py  site.py  tool.py  user.py
backend/providers/: base.py  claude_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/repositories/: __init__.py  base.py  mongo_repo.py  sqlite_repo.py
backend/routers/: analytics.py  audit.py  auth.py  chat.py  chat_sse.py  config.py  crawl.py  demo_api.py  flows.py  knowledge.py  llm_keys.py  memory.py  models.py  sessions.py  sites.py  tools.py  users.py
backend/tests/: conftest.py  test_analytics_api.py  test_auth.py  test_chat_agent.py  test_chat_sse.py  test_config.py  test_crawl_api.py  test_crawler.py  test_database_migrations.py  test_flows_api.py  test_health.py  test_knowledge_api.py  test_models.py  test_sessions.py  test_sites.py  test_tools.py  test_tools_api.py  test_users.py
backend/utils/: cors.py  crypto.py  pricing.py  rate_limit.py
dashboard/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  main.tsx  vite-env.d.ts
dashboard/src/components/: EmptyState.tsx  LLMKeysSection.tsx  Layout.tsx  NotificationBell.tsx  OnboardingChecklist.tsx  ProtectedRoute.tsx  Skeleton.tsx
dashboard/src/lib/: api.ts  i18n.ts  store.ts  useKeyboardShortcuts.ts
dashboard/src/pages/: Analytics.tsx  AuditLog.tsx  ChatLog.tsx  Embed.tsx  Knowledge.tsx  Login.tsx  Playground.tsx  Settings.tsx  Setup.tsx  Sites.tsx  Tools.tsx  Users.tsx  Visitors.tsx
docs/: api-reference.md  architecture.md  deployment.md  development.md
docs/superpowers/plans/: 2026-03-28-api-learning-enhancement.md
examples/: demo.html
frontend/: Dockerfile  Dockerfile.widget  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.widget.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.tsx  FormField.tsx  LLMKeysSection.tsx  Layout.tsx  NotificationBell.tsx  OnboardingChecklist.tsx  PageHeader.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  i18n.ts  notifications.ts  store.ts  useKeyboardShortcuts.ts  useLocale.ts  (+1 more)
scripts/: ai-commit.mjs
widget/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
widget/src/: index.ts
(+35 files in other folders)
