[project]
name = "plugo"
version = "1.0.0"
description = "Embeddable AI Chat Widget"
requires-python = ">=3.11"

# =============================================================================
# Ruff — fast Python linter and formatter
# https://docs.astral.sh/ruff/
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (flag print statements)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # allow print() — used for startup/shutdown logs
    "B008",   # allow function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "knowledge", "models", "providers", "repositories", "routers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# =============================================================================
# Mypy — static type checking
# =============================================================================

# =============================================================================
# Pytest — testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0

# =============================================================================
# Mypy — static type checking
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
