[project]
name = "plugo-backend"
version = "1.0.0"
description = "Plugo Backend — FastAPI server"
requires-python = ">=3.12"

# =============================================================================
# Ruff — fast Python linter and formatter
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (flag print statements)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # allow print() — used for startup/shutdown logs
    "B008",   # allow function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
# Imports after load_dotenv() so the env file is loaded before config/models.
"main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "knowledge", "models", "providers", "repositories", "routers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# =============================================================================
# Pytest — testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50

# =============================================================================
# Mypy — static type checking
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
